--- a/index.html
+++ b/index.html
@@ -5,10 +5,54 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>MDIA</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<script
+			src="https://kit.fontawesome.com/e4b743f868.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
+		<main class="hero">
+			<header class="main-header">
+				<nav class="main-nav">
+					<div class="page-number">01</div>
+					<ul>
+						<li>
+							<a href="#projects">projects</a>
+						</li>
+						<li>
+							<a href="#contact">contact</a>
+						</li>
+					</ul>
+				</nav>
+			</header>
+			<section class="text-hero">
+				<h1>Web <span>Developer</span></h1>
+				<h3>Karl Nielsen</h3>
+			</section>
+			<section class="social-media">
+				<a href="https://twitter.com/mdiadk" target="_blank">
+					<i class="fa-brands fa-twitter"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com/in/karl-nielsen-2787a6205/"
+					target="_blank"
+				>
+					<i class="fa-brands fa-linkedin"></i>
+				</a>
+				<a href="https://github.com/kgnik" target="_blank">
+					<i class="fa-brands fa-github"></i>
+				</a>
+			</section>
+		</main>
+		<section class="section-projects"></section>
 		<script src="js/main.js"></script>
 	</body>
 </html>
