add AOS (animation on scroll)  functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			src="https://kit.fontawesome.com/e4b743f868.js"
 			crossorigin="anonymous"
 		></script>
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	</head>
 	<body>
 		<main class="hero">
@@ -54,5 +55,9 @@
 		</main>
 		<section class="section-projects"></section>
 		<script src="js/main.js"></script>
+		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+		<script>
+			AOS.init();
+		</script>
 	</body>
 </html>
