modify homepage sizing and spacing

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</ul>
 				</nav>
 			</header>
-			<section class="text-hero">
+			<section class="text-hero container">
 				<h1>
 					<span
 						data-aos-easing="ease-in-out-quart"
@@ -79,12 +79,17 @@
 				</a>
 			</section>
 		</main>
-		<section class="section-projects"></section>
+		<section class="section-projects">
+			<div class="title container">
+				<h2 data-aos="slide-right">PROJECTS</h2>
+			</div>
+		</section>
 		<script src="js/main.js"></script>
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script>
 			AOS.init({
 				duration: 2000,
+				once: true,
 			});
 		</script>
 	</body>
