add contact page, add snap scrolling in CSS

--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@
 			</section>
 		</main>
 		<section class="section-projects">
+			<div class="page-number page-number-2">02</div>
 			<div class="title container">
-				<h2 data-aos="slide-right">PROJECTS</h2>
+				<h2 data-aos="fade">PROJECTS</h2>
+			</div>
+		</section>
+		<section class="section-contact">
+			<div class="page-number page-number-2">03</div>
+			<div class="title container">
+				<h2 data-aos="fade">CONTACT</h2>
 			</div>
 		</section>
 		<script src="js/main.js"></script>
