add IDs to section in HTML  to enable smooth scrolling with JS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	</head>
 	<body>
-		<main class="hero">
+		<main id="hero" class="hero">
 			<header class="main-header">
 				<nav
 					class="main-nav"
@@ -79,13 +79,13 @@
 				</a>
 			</section>
 		</main>
-		<section class="section-projects">
+		<section id="projects" class="section-projects">
 			<div class="page-number page-number-2">02</div>
 			<div class="title container">
 				<h2 data-aos="fade">PROJECTS</h2>
 			</div>
 		</section>
-		<section class="section-contact">
+		<section id="contact" class="section-contact">
 			<div class="page-number page-number-2">03</div>
 			<div class="title container">
 				<h2 data-aos="fade">CONTACT</h2>
