add navbar to all pages

--- a/index.html
+++ b/index.html
@@ -80,15 +80,49 @@
 			</section>
 		</main>
 		<section id="projects" class="section-projects">
-			<div class="page-number page-number-2">02</div>
+			<nav class="main-nav">
+				<div class="page-number">02</div>
+				<ul>
+					<li>
+						<a href="#hero">home</a>
+					</li>
+					<li>
+						<a href="#contact">contact</a>
+					</li>
+				</ul>
+			</nav>
 			<div class="title container">
 				<h2 data-aos="fade">PROJECTS</h2>
 			</div>
 		</section>
 		<section id="contact" class="section-contact">
-			<div class="page-number page-number-2">03</div>
+			<nav class="main-nav">
+				<div class="page-number">02</div>
+				<ul>
+					<li>
+						<a href="#hero">home</a>
+					</li>
+					<li>
+						<a href="#projects">projects</a>
+					</li>
+				</ul>
+			</nav>
 			<div class="title container">
 				<h2 data-aos="fade">CONTACT</h2>
+				<section class="social-media">
+					<a href="https://twitter.com/mdiadk" target="_blank">
+						<i class="fa-brands fa-twitter"></i>
+					</a>
+					<a
+						href="https://www.linkedin.com/in/karl-nielsen-2787a6205/"
+						target="_blank"
+					>
+						<i class="fa-brands fa-linkedin"></i>
+					</a>
+					<a href="https://github.com/kgnik" target="_blank">
+						<i class="fa-brands fa-github"></i>
+					</a>
+				</section>
 			</div>
 		</section>
 		<script src="js/main.js"></script>
