add AOS functionality to contact page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</section>
 		<section id="contact" class="section-contact">
 			<nav class="main-nav">
-				<div class="page-number">02</div>
+				<div class="page-number">03</div>
 				<ul>
 					<li>
 						<a class="btn" href="#hero">home</a>
@@ -123,28 +123,33 @@
 				<h2 class="title" data-aos="fade">CONTACT</h2>
 				<div class="contact-content">
 					<div class="contact-text">
-						<div class="contact-title">
+						<div data-aos="fade" data-aos-delay="100" class="contact-title">
 							<h3>
-								<span class="">You</span> deserve
+								<span>You deserve</span>
 								<span class="break">a beautiful website!</span>
 							</h3>
 							<div class="line"></div>
 						</div>
-						<p>
+						<p data-aos="fade" data-aos-delay="200">
 							Whether you're selling goods or providing a service, an online
 							platform will elevate your business to the next level.
 						</p>
 
-						<p>
+						<p data-aos="fade" data-aos-delay="300">
 							I help small businesses stand out on the web by providing them
 							with a unique custom website.
 						</p>
-						<p>
+						<p data-aos="fade" data-aos-delay="400">
 							You can either contact me by using one of the links below, or by
 							filling in the contact form to the right
 						</p>
-						<p>Let's connect!</p>
-						<section class="contact-social-media">
+						<p data-aos="fade" data-aos-delay="500">Let's connect!</p>
+						<section
+							data-aos="flip-up"
+							data-aos-delay="700"
+							data-aos-anchor-placement=""
+							class="contact-social-media"
+						>
 							<a href="https://twitter.com/mdiadk" target="_blank">
 								<i class="fa-brands fa-twitter"></i>
 							</a>
@@ -162,26 +167,44 @@
 							</a>
 						</section>
 					</div>
-					<div class="form">
-						<div class="contact-title">
+					<div data-aos="slide-left" data-aos-delay="800" class="form">
+						<div data-aos="fade" data-aos-delay="900" class="contact-title">
 							<h3>I'm open to work!</h3>
 							<div class="line"></div>
 						</div>
 						<form action="https://formsubmit.co/mail@mdia.dk" method="POST">
 							<div class="top-row">
 								<input type="hidden" name="_template" value="box" />
-								<input type="text" name="name" required placeholder="name" />
+								<input
+									data-aos="slide-left"
+									data-aos-delay="1000"
+									type="text"
+									name="name"
+									required
+									placeholder="name"
+								/>
 
-								<input type="email" name="email" required placeholder="email" />
+								<input
+									data-aos="slide-left"
+									data-aos-delay="1100"
+									type="email"
+									name="email"
+									required
+									placeholder="email"
+								/>
 							</div>
 							<textarea
+								data-aos="fade"
+								data-aos-delay="1200"
 								rows="18"
 								name="text"
 								placeholder="write your message here.."
 								required
 							>
 							</textarea>
-							<button type="submit">Send</button>
+							<button data-aos="flip-up" data-aos-delay="2300" type="submit">
+								Send
+							</button>
 						</form>
 					</div>
 				</div>
