add contactform functionality, redirect + subject

--- a/index.html
+++ b/index.html
@@ -175,6 +175,17 @@
 						<form action="https://formsubmit.co/mail@mdia.dk" method="POST">
 							<div class="top-row">
 								<input type="hidden" name="_template" value="box" />
+								<input type="hidden" name="_captcha" value="false" />
+								<input
+									type="hidden"
+									name="_subject"
+									value="New email on MDIA.DK!"
+								/>
+								<input
+									type="hidden"
+									name="_next"
+									value="https://mdia.dk/thankyou.html"
+								/>
 								<input
 									data-aos="slide-left"
 									data-aos-delay="1000"
