--- a/index.html
+++ b/index.html
@@ -63,28 +63,29 @@
 				<h3 data-aos="fade" data-aos-duration="2000" data-aos-delay="3000">
 					Karl Nielsen
 				</h3>
-			</section>
-			<section
-				class="social-media"
-				data-aos="fade"
-				data-aos-duration="2000"
-				data-aos-delay="2000"
-			>
-				<a href="https://twitter.com/mdiadk" target="_blank">
-					<i class="fa-brands fa-twitter"></i>
-				</a>
-				<a
-					href="https://www.linkedin.com/in/karl-nielsen-2787a6205/"
-					target="_blank"
+				<section
+					class="social-media"
+					data-aos="fade"
+					data-aos-offset="1"
+					data-aos-duration="2000"
+					data-aos-delay="2000"
 				>
-					<i class="fa-brands fa-linkedin"></i>
-				</a>
-				<a href="https://github.com/kgnik" target="_blank">
-					<i class="fa-brands fa-github"></i>
-				</a>
-				<a href="mailto:mail@mdia.dk" target="_blank">
-					<i class="fa-solid fa-envelope"></i>
-				</a>
+					<a href="https://twitter.com/mdiadk" target="_blank">
+						<i class="fa-brands fa-twitter"></i>
+					</a>
+					<a
+						href="https://www.linkedin.com/in/karl-nielsen-2787a6205/"
+						target="_blank"
+					>
+						<i class="fa-brands fa-linkedin"></i>
+					</a>
+					<a href="https://github.com/kgnik" target="_blank">
+						<i class="fa-brands fa-github"></i>
+					</a>
+					<a href="mailto:mail@mdia.dk" target="_blank">
+						<i class="fa-solid fa-envelope"></i>
+					</a>
+				</section>
 			</section>
 		</main>
 		<section id="projects" class="section-projects">
