--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					data-aos-duration="2000"
 					data-aos-delay="2000"
 				>
-					<div class="page-number">01</div>
+					<div class="page-number">01 <span>/ 03</span></div>
 					<ul>
 						<li>
 							<a class="btn active" href="#hero">home</a>
@@ -90,7 +90,7 @@
 		</main>
 		<section id="projects" class="section-projects">
 			<nav class="main-nav second-nav">
-				<div class="page-number">02</div>
+				<div class="page-number">02 <span>/ 03</span></div>
 				<ul>
 					<li>
 						<a class="btn" href="#hero">home</a>
@@ -109,7 +109,7 @@
 		</section>
 		<section id="contact" class="section-contact">
 			<nav class="main-nav second-nav">
-				<div class="page-number">03</div>
+				<div class="page-number">03 <span>/ 03</span></div>
 				<ul>
 					<li>
 						<a class="btn" href="#hero">home</a>
@@ -132,10 +132,6 @@
 								<span class="break">a beautiful website!</span>
 							</h3>
 						</div>
-						<p data-aos="fade" data-aos-delay="200">
-							Whether you're selling goods or providing a service, an online
-							platform will elevate your business to the next level.
-						</p>
 
 						<p data-aos="fade" data-aos-delay="300">
 							I help small businesses stand out on the web by providing them
@@ -149,7 +145,6 @@
 						<section
 							data-aos="flip-up"
 							data-aos-delay="700"
-							data-aos-anchor-placement=""
 							class="contact-social-media"
 						>
 							<a href="https://twitter.com/mdiadk" target="_blank">
@@ -209,6 +204,7 @@
 							<textarea
 								data-aos="fade"
 								data-aos-delay="1200"
+								cols="1"
 								rows="18"
 								name="text"
 								placeholder="write your message here.."
