update form redirect

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								<input
 									type="hidden"
 									name="_next"
-									value="https://mdia.dk/thankyou.html"
+									value="https://mdiadk.netlify.app/thankyou.html"
 								/>
 								<input
 									data-aos="slide-left"
