create redirect after form submit, created thankyou page with redirect back to homepage after delay

--- a/thankyou.html
+++ b/thankyou.html
@@ -5,8 +5,29 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>MDIA</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="css/thankyou.css" />
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	</head>
 	<body>
-		THANK YOU!
+		<h1 data-aos="fade-up" data-aos-delay="500" data-aos-duration="2000">
+			Thank you!
+			<!-- <span data-aos="fade-up" data-aos-delay="2500" data-aos-duration="2000"
+				>MESSAGE RECEIVED</span
+			> -->
+		</h1>
+		<script src="js/thankyou.js"></script>
+		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+		<script>
+			AOS.init({
+				duration: 2000,
+				once: true,
+			});
+		</script>
 	</body>
 </html>
