fix textarea whitespace

--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
 								name="text"
 								placeholder="write your message here.."
 								required
-							>
-							</textarea>
+							></textarea>
 							<button
 								data-aos-offset="0"
 								data-aos="flip-up"
