fix github link

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							>
 								<i class="fa-brands fa-linkedin"></i>
 							</a>
-							<a href="https://github.com/kgnik" target="_blank">
+							<a href="https://github.com/kgni" target="_blank">
 								<i class="fa-brands fa-github"></i>
 							</a>
 							<a href="mailto:mail@mdia.dk" target="_blank">
