--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			src="https://kit.fontawesome.com/e4b743f868.js"
 			crossorigin="anonymous"
 		></script>
-		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 	</head>
 	<body>
 		<main id="hero" class="hero">
