fix slide in animation in contact section (AOS)

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							</a>
 						</section>
 					</div>
-					<div data-aos="slide-left" data-aos-delay="800" class="form">
+					<div data-aos="fade" data-aos-delay="500" class="form">
 						<div data-aos="fade" data-aos-delay="900" class="contact-title">
 							<h3>I'm open to work!</h3>
 							<div class="line"></div>
@@ -184,7 +184,7 @@
 									value="https://mdiadk.netlify.app/thankyou.html"
 								/>
 								<input
-									data-aos="slide-left"
+									data-aos="fade"
 									data-aos-delay="1000"
 									type="text"
 									name="name"
@@ -193,7 +193,7 @@
 								/>
 
 								<input
-									data-aos="slide-left"
+									data-aos="fade"
 									data-aos-delay="1100"
 									type="email"
 									name="email"
@@ -213,7 +213,7 @@
 							<button
 								data-aos-offset="0"
 								data-aos="flip-up"
-								data-aos-delay="2300"
+								data-aos-delay="1300"
 								type="submit"
 							>
 								Send
