add projects. add media queries for project section

--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
 				<a href="https://twitter.com/mdiadk" target="_blank">
 					<i class="fa-brands fa-twitter"></i>
 				</a>
-				<a
-					href="https://www.linkedin.com/in/karl-nielsen-2787a6205/"
-					target="_blank"
-				>
+				<a href="https://www.linkedin.com/in/kgni/" target="_blank">
 					<i class="fa-brands fa-linkedin"></i>
 				</a>
 				<a href="https://github.com/kgni" target="_blank">
@@ -105,6 +102,52 @@
 			</nav>
 			<div class="title container">
 				<h2 data-aos="fade">PROJECTS</h2>
+			</div>
+			<div class="projects-container">
+				<div class="project-card">
+					<img
+						class="project-img"
+						src="img/brugerboss_project.png"
+						alt="Project One Image"
+					/>
+					<div class="project-card-text">
+						<h3>Burger Boss</h3>
+						<p>
+							Static restaurant website for a fictive fastfood burger
+							restaurant.
+						</p>
+						<a target="_blank" href="https://burgerboss.netlify.app/"
+							>View here</a
+						>
+					</div>
+				</div>
+				<div class="project-card">
+					<img
+						class="project-img"
+						src="img/dsdi_project.png"
+						alt="Project Two Image"
+					/>
+					<div class="project-card-text">
+						<h3>DSDI</h3>
+						<p>Contact page for a Danish/Spanish drone company</p>
+						<a target="_blank" href="https://dsdi.dk/">View here</a>
+					</div>
+				</div>
+				<div class="project-card">
+					<img
+						class="project-img"
+						src="img/andaly_project.png"
+						alt="Project Three Image"
+					/>
+					<div class="project-card-text">
+						<h3>Andaly</h3>
+						<p>
+							Static website for fictive shoe/clothing blog. This is just a
+							sample project
+						</p>
+						<a target="_blank" href="https://andaly.netlify.app">View here</a>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section id="contact" class="section-contact">
@@ -150,10 +193,7 @@
 							<a href="https://twitter.com/mdiadk" target="_blank">
 								<i class="fa-brands fa-twitter"></i>
 							</a>
-							<a
-								href="https://www.linkedin.com/in/karl-nielsen-2787a6205/"
-								target="_blank"
-							>
+							<a href="https://www.linkedin.com/in/kgni/" target="_blank">
 								<i class="fa-brands fa-linkedin"></i>
 							</a>
 							<a href="https://github.com/kgni" target="_blank">
