change redirect on formsubmit to be to mdia.dk instead of netlify domain

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 								<input
 									type="hidden"
 									name="_next"
-									value="https://mdiadk.netlify.app/thankyou.html"
+									value="https://mdia.dk/thankyou.html"
 								/>
 								<input
 									data-aos="fade"
