add AOS functionality to project cards (fade in animation)

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<h2 data-aos="fade">PROJECTS</h2>
 			</div>
 			<div class="projects-container">
-				<div class="project-card">
+				<div data-aos="fade" data-aos-delay="100" class="project-card">
 					<img
 						class="project-img"
 						src="img/brugerboss_project.png"
@@ -121,7 +121,7 @@
 						>
 					</div>
 				</div>
-				<div class="project-card">
+				<div data-aos="fade" data-aos-delay="300" class="project-card">
 					<img
 						class="project-img"
 						src="img/dsdi_project.png"
@@ -133,7 +133,7 @@
 						<a target="_blank" href="https://dsdi.dk/">View here</a>
 					</div>
 				</div>
-				<div class="project-card">
+				<div data-aos="fade" data-aos-delay="500" class="project-card">
 					<img
 						class="project-img"
 						src="img/andaly_project.png"
