add about section, add snapscrolling for about section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 					data-aos-duration="2000"
 					data-aos-delay="2000"
 				>
-					<div class="page-number">01 <span>/ 03</span></div>
+					<div class="page-number">01 <span>/ 04</span></div>
 					<ul>
 						<li>
 							<a class="btn active" href="#hero">home</a>
+						</li>
+						<li>
+							<a class="btn" href="#about">about</a>
 						</li>
 						<li>
 							<a class="btn" href="#projects">projects</a>
@@ -85,12 +88,39 @@
 				</a>
 			</section>
 		</main>
-		<section id="projects" class="section-projects">
+
+		<section id="about" class="section-about">
 			<nav class="main-nav second-nav">
-				<div class="page-number">02 <span>/ 03</span></div>
+				<div class="page-number">02 <span>/ 04</span></div>
 				<ul>
 					<li>
 						<a class="btn" href="#hero">home</a>
+					</li>
+					<li>
+						<a class="btn active" href="#about">about</a>
+					</li>
+					<li>
+						<a class="btn" href="#projects">projects</a>
+					</li>
+					<li>
+						<a class="btn" href="#contact">contact</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="title container">
+				<h2 data-aos="fade">ABOUT</h2>
+			</div>
+		</section>
+
+		<section id="projects" class="section-projects">
+			<nav class="main-nav second-nav">
+				<div class="page-number">03 <span>/ 04</span></div>
+				<ul>
+					<li>
+						<a class="btn" href="#hero">home</a>
+					</li>
+					<li>
+						<a class="btn" href="#about">about</a>
 					</li>
 					<li>
 						<a class="btn active" href="#projects">projects</a>
@@ -152,10 +182,13 @@
 		</section>
 		<section id="contact" class="section-contact">
 			<nav class="main-nav second-nav">
-				<div class="page-number">03 <span>/ 03</span></div>
+				<div class="page-number">04 <span>/ 04</span></div>
 				<ul>
 					<li>
 						<a class="btn" href="#hero">home</a>
+					</li>
+					<li>
+						<a class="btn" href="#about">about</a>
 					</li>
 					<li>
 						<a class="btn" href="#projects">projects</a>
