change sections from div to section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<div class="title container">
 				<h2 data-aos="fade">PROJECTS</h2>
 			</div>
-			<div class="projects-container">
+			<section class="projects-container">
 				<div data-aos="fade" data-aos-delay="100" class="project-card">
 					<img
 						class="project-img"
@@ -178,7 +178,7 @@
 						<a target="_blank" href="https://andaly.netlify.app">View here</a>
 					</div>
 				</div>
-			</div>
+			</section>
 		</section>
 		<section id="contact" class="section-contact">
 			<nav class="main-nav second-nav">
@@ -198,7 +198,7 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="container contact-container">
+			<section class="container contact-container">
 				<h2 class="title" data-aos="fade">CONTACT</h2>
 				<div class="contact-content">
 					<div class="contact-text">
@@ -294,7 +294,7 @@
 						</form>
 					</div>
 				</div>
-			</div>
+			</section>
 		</section>
 		<script src="js/main.js"></script>
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
