add img and text to about-section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,22 @@
 			<div class="title container">
 				<h2 data-aos="fade">ABOUT</h2>
 			</div>
+			<section class="about-container">
+				<img src="img/pb-offwhite-bg.jpg" alt="" />
+				<div class="about-text">
+					<h2>Hi, I'm Karl!</h2>
+					<p>A software developer from Denmark, currently living in Spain</p>
+					<p>
+						Creative, detail-oriented, and always ready to learn new skills and
+						further my growth and development.
+					</p>
+					<p>Currently learning MERN stack.</p>
+					<p>
+						Feel free to check out my <a target="_blank" href="">resume</a>, or
+						scroll to the next page for my projects!
+					</p>
+				</div>
+			</section>
 		</section>
 
 		<section id="projects" class="section-projects">
