add media queries to about section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 			</div>
 			<section class="about-container">
 				<img src="img/pb-offwhite-bg.jpg" alt="" />
+				<div class="about-h2-mobile">Hi, <span>I'm Karl!</span></div>
 				<div class="about-text">
 					<h2>Hi, I'm Karl!</h2>
 					<p>A software developer from Denmark, currently living in Spain</p>
