add todo for about section (AOS)

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 			</section>
 		</main>
 
+		<!-- TODO - Add AOS animations on about section -->
 		<section id="about" class="section-about">
 			<nav class="main-nav second-nav">
 				<div class="page-number">02 <span>/ 04</span></div>
